--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="form-item col-12 padd-15">
-                                        <button type="submit" class="btn">Send Message</button>
+                                        <button type="submit" class="btn">Message</button>
                                     </div>
                                 </div>
                             </div>
