--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         <!-- protfolio-item -->
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
-                                <a href=" https://oscar-2283.github.io/color-game/" target="_blank" >
+                                <a href=" https://oscar-2283.github.io/weather/" target="_blank" >
                                     <div class="portfolio-img">
                                         <img src="./img/project-img/2.png" alt="">
                                     </div>
