--- a/index.html
+++ b/index.html
@@ -308,17 +308,6 @@
                         <!-- protfolio-item -->
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
-                                <a href="https://oscar-2283.github.io/twelve/" target="_blank" >
-                                    <div class="portfolio-img">
-                                        <img src="https://oscar-2283.github.io/twelve/" alt="">
-                                    </div>
-                                    <div class="portfolio-item-text">十二段鍋物形象網站</div>
-                                </a>
-                            </div>
-                        </div>
-                        <!-- protfolio-item -->
-                        <div class="portfolio-item padd-15">
-                            <div class="portfolio-item-inner shadow-dark">
                                 <a href="https://oscar-2283.github.io/cookie-monster/" target="_blank" >
                                     <div class="portfolio-img">
                                         <img src="./img/project-img/1.png" alt="">
@@ -327,6 +316,17 @@
                                 </a>
                             </div>
                         </div>
+                        <!-- protfolio-item -->
+                        <div class="portfolio-item padd-15">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <a href="https://oscar-2283.github.io/twelve/" target="_blank" >
+                                <div class="portfolio-img">
+                                    <img src="./img/project-img/4.png" alt="">
+                                </div>
+                                <div class="portfolio-item-text">十二段鍋物形象網站</div>
+                            </a>
+                        </div>
+                    </div>
                         <!-- protfolio-item -->
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
