--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <h3 class="my-profession">我是一個 <span class="typing"></span></h3>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="./img/i6nMirR.jpg" alt="">
+                            <img src="./img/me.png" alt="">
                         </div>
                     </div>
                 </div>
