--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                               <i class="fa fa-calendar"></i> 2022-2023-2
                             </h3>
                             <h4 class="timeline-title">創造力互動媒體</h4>
-                            <p class="timeline-text">光前端設計師</p>
+                            <p class="timeline-text">前端設計師</p>
                           </div>
                           <!-- timeline item -->
                           <div class="timeline-item">
